[chore] : gitignore 수정
gradlew 오류 발생.

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@
 build/
 **/build/
 !src**/build/
-
+!gradle-wrapper.jar
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
