--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@
 build/
 **/build/
 !src**/build/
-!gradle-wrapper.jar
-
+!gradle/gradle-wrapper.jar
+!gradle/gradle-wrapper
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
