[chore] : EmbeddedRedisConfig 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.session:spring-session-data-redis'
 	implementation 'org.redisson:redisson-spring-boot-starter:3.17.5'
+	implementation 'it.ozimov:embedded-redis:0.7.2'
+//	compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 	compileOnly 'org.projectlombok:lombok'
