--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -33,3 +36,28 @@ jobs:
       - name: Show Current Time
         run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
         shell: bash
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: alsghks9700/board-mall:latest
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }} # 환경변수 기본 설정
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: boradmalleb # 엘리스틱 빈스톡 애플리케이션 이름!
+          environment_name: Boradmalleb-env-1 # 엘리스틱 빈스톡 환경 이름!
+          version_label: board-mall-${{steps.current-time.outputs.formattedTime}}
+          region: ap-northeast-2
+          deployment_package: Dockerrun.aws.json
