--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,8 @@ spring:
 
   ## redis configuration
   redis:
-    host: localhost
+#    host: localhost
+    host: redis-board.lrih02.ng.0001.apn2.cache.amazonaws.com
     password:
     port: 6379
   session:
