--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: alsghks9700/board-mall:latest
+          tags: alsghks9700/board-mall-eb:latest
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v20
