--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 # DB configuration
 spring:
 # H2
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/boardMall
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-## MySQL
 #  datasource:
-#    url: jdbc:mysql://min-db.ctv5qlni3dke.ap-northeast-2.rds.amazonaws.com:3306/boardmalldb?serverTimezone=UTC&characterEncoding=UTF-8
-#    username: admin
-#    password: adminadmin
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:h2:tcp://localhost/~/boardMall
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+## MySQL
+  datasource:
+    url: jdbc:mysql://min-db.ctv5qlni3dke.ap-northeast-2.rds.amazonaws.com:3306/boardmalldb?serverTimezone=UTC&characterEncoding=UTF-8
+    username: admin
+    password: adminadmin
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 
   ## redis configuration
