[test] : UserController 테스트 작성 완료.
RestUserController 테스트 작성을 완료함.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # DB configuration
 spring:
   profiles:
-    default: deploy
+    default: local
   # H2
   datasource:
     url: jdbc:h2:tcp://localhost/~/boardMall
