[chore] : Jacoco 추가 & gitignore 설정 추가 완료.
테스트 커버리지를 확인하기 위한 Jacoco 와 gitignore 설정을 추가함.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,16 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+# Jacoco
+target/
+.settings/
+!org.jacoco.core/.settings/
+!org.jacoco.core.test/.settings/
+org.jacoco.agent/src/jacocoagent.jar
+.idea
+*.iml
+/jacoco/**
+
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
